# cyrsoxs-visualizer

./: .gitignore  LICENSE  README.md  mkdocs.yml  setup.cfg  tox.ini
cyrsoxs_visualizer/: _dock_widget.py  _function.py  _reader.py
cyrsoxs_visualizer/_tests/: myfile.hd5  test_dock_widget.py  test_function.py  test_reader.py  test_writer.py
docs/: index.md
