[metadata]
name = cyrsoxs-visualizer
version = 0.0.1
author = Peter Dudenas
author_email = peter.dudenas@nist.gov
url = https://github.com/pdudenas/cyrsoxs-visualizer
license = MIT
description = Morphology visualizer for Cy-RSoXS simulation engine
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
project_urls =
    Bug Tracker = https://github.com/pdudenas/cyrsoxs-visualizer/issues
    Documentation = https://github.com/pdudenas/cyrsoxs-visualizer#README.md
    Source Code = https://github.com/pdudenas/cyrsoxs-visualizer
    User Support = https://github.com/pdudenas/cyrsoxs-visualizer/issues

[options]
packages = find:
python_requires = >=3.7

# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy


[options.entry_points] 
napari.plugin = 
    cyrsoxs-visualizer = cyrsoxs_visualizer
